Changelog
=========

1.2.1 - unreleased
-------------------

- Support local navigation root (INavigationRoot) for the previous 
  events link in events portlet.
  Fixes http://dev.plone.org/plone/ticket/9246 
  http://dev.plone.org/plone/ticket/9668
  [pelle]

- Added missing space to tooltip in the calendar portlet.
  Fixes http://dev.plone.org/plone/ticket/9047
  [lzdych]

- Navigation(s) some time disappeared when dealing with multiple navigations 
  pointing to roots with common starting ids like: "abc", "abcde", "abcdefg".
  Thanks to keul for patch.
  Fixes http://dev.plone.org/plone/ticket/9405
  [pelle]

- Fixed base.Assignment - typo
  Fixes http://dev.plone.org/plone/ticket/9350
  [naro]

- Support for portal-relative paths in portlets.xml keys.
  Fixes http://dev.plone.org/plone/ticket/9437
  [naro]

- Some XHTML fixes to be also XHTML Strict compliant.
  See http://dev.plone.org/plone/ticket/4379
  [keul]


1.2 - July 13, 2009
-------------------

- Fix ComponentLookupError on portlet management screen for special use cases
  such as collective.portletpage, where not all content have the same 
  managers.
  [optilude]

- Template cleanup: add missing xmlns declarations and fix invalid markup.
  [wichert]


1.2rc3 - April 8, 2009
----------------------

- Correct import error in editmanager.py.
  [optilude]

- Correct case in the feedparser dependency.
  [wichert]


1.2rc1 - March 27, 2009
-----------------------

- Added a permission check to portlets' add view.
  Fixes http://dev.plone.org/plone/ticket/8510
  [optilude]


1.2b1 - March 7, 2009
---------------------

- Fixed the various portlets to no longer use portal_url, but use the 
  navigation_root_url from the plone_portal_state view. Changed the
  manage-dashboard view to be available on an INavigationRoot.
  This implements http://plone.org/products/plone/roadmap/234
  [calvinhp]

- Removed portlets/feedparser.py.  Added FeedParser as external